Add Users and UserController and login information

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+spring.datasource.username=root
+spring.datasource.password=^Koo5.bqO6*W
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
