--- a/bakery_server/pom.xml
+++ b/bakery_server/pom.xml
@@ -40,6 +40,10 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
